--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title></title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
-            <a>Header Logo</a>
-            <a>header link one</a>
-            <a>header link two</a>
-            <a>header link three</a>
+            <div class="container">
+                <a class="logo">Header Logo</a>
+                <a>header link one</a>
+                <a>header link two</a>
+                <a>header link three</a>
+            </div>
         </header>
     </body>
 </html>
