--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
                 <a>header link three</a>
             </div>
         </header>
-        <div>
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contraist</p>
-            <button>Sign up</button>
-            <div>This is a placeholder for an image</div>
+        <div class="second">
+            <div class="container">
+                <div class="left">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contraist</p>
+                    <button>Sign up</button>
+                </div>
+                <div class="image">This is a placeholder for an image</div>
+            </div>
         </div>
     </body>
 </html>
