--- a/index.html
+++ b/index.html
@@ -27,5 +27,18 @@
                 <div class="image">This is a placeholder for an image</div>
             </div>
         </div>
+        <div class="third">
+            <div class="container">
+                <h2>Some random information.</h2>
+                <div class="card"></div>
+                <p>this is some subtext under an illustration or image</p>
+                <div class="card"></div>
+                <p>this is some subtext under an illustration or image</p>
+                <div class="card"></div>
+                <p>this is some subtext under an illustration or image</p>
+                <div class="card"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
     </body>
 </html>
