Add style for third section

--- a/index.html
+++ b/index.html
@@ -30,14 +30,24 @@
         <div class="third">
             <div class="container">
                 <h2>Some random information.</h2>
-                <div class="card"></div>
-                <p>this is some subtext under an illustration or image</p>
-                <div class="card"></div>
-                <p>this is some subtext under an illustration or image</p>
-                <div class="card"></div>
-                <p>this is some subtext under an illustration or image</p>
-                <div class="card"></div>
-                <p>this is some subtext under an illustration or image</p>
+                <div class="card-list">
+                    <div class="card">
+                        <div class="card-image"></div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="card">
+                        <div class="card-image"></div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="card">
+                        <div class="card-image"></div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="card">
+                        <div class="card-image"></div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
