--- a/index.html
+++ b/index.html
@@ -50,5 +50,9 @@
                 </div>
             </div>
         </div>
+        <div class="forth">
+            <em>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em>
+            <span>-Thor, God of Thunder</span>
+        </div>
     </body>
 </html>
