Add forth section styles

--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
             </div>
         </div>
         <div class="forth">
-            <em>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em>
-            <span>-Thor, God of Thunder</span>
+            <div class="container">
+                <em>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em>
+                <span>-Thor, God of Thunder</span>
+            </div>
         </div>
     </body>
 </html>
