--- a/index.html
+++ b/index.html
@@ -57,10 +57,14 @@
             </div>
         </div>
         <div class="fifth">
-            <div>
-                <h3>Call to action! It's time!</h3>
-                <p>Sign up for our product by clicking that button right over there!</p>
-                <button>sign up</button>
+            <div class="container">
+                <div class="action-container">
+                    <div>
+                        <h3>Call to action! It's time!</h3>
+                        <p>Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <button>Sign up</button>
+                </div>
             </div>
         </div>
     </body>
