Add footer element

--- a/index.html
+++ b/index.html
@@ -67,5 +67,8 @@
                 </div>
             </div>
         </div>
+        <footer>
+            Copyright © The Odin Project 2021
+        </footer>
     </body>
 </html>
